<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_create_wallet"
                style="@style/TextAppearance.App.HeadlineCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/half_horizontal_margin"
                android:text="@string/label_create_wallet"
                app:drawableStartCompat="@drawable/ic_build_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_restore_wallet"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc_confirm_wallet"
                style="@style/TextAppearance.App.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/intro_confirm_create_wallet" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_word_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_horizontal_margin"
                app:errorEnabled="true"
                tools:hint="@string/label_word_confirm_create_wallet">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_word_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_horizontal_margin"
                app:errorEnabled="true"
                tools:hint="@string/label_word_confirm_create_wallet">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/check_confirm_create_wallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/check_confirm_create_wallet"
                android:textAppearance="@style/TextAppearance.App.Body1" />

            <Button
                android:id="@+id/button_next_step"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:elegantTextHeight="true"
                android:text="@string/button_done" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>